Add a simple /health endpoint which all Otto services should have
